# apertium-kok-hin

./: AUTHORS  Makefile.am  README  apertium-kok-hin.hin-kok.lsx  apertium-kok-hin.kok-hin.dix  apertium-kok-hin.kok-hin.lsx  configure.ac  modes.xml
test/: hin-kok-anaph-expected.txt  hin-kok-autoseq-expected.txt  hin-kok-biltrans-expected.txt  hin-kok-generator-expected.txt  hin-kok-input.txt  hin-kok-interchunk-expected.txt  hin-kok-morph-expected.txt  hin-kok-postchunk-expected.txt  kok-hin-anaph-expected.txt  kok-hin-generator-expected.txt  kok-hin-input.txt  kok-hin-interchunk-expected.txt  kok-hin-lex-expected.txt  kok-hin-morph-expected.txt  kok-hin-pretransfer-expected.txt  kok-hin-revautoseq-expected.txt  tests.json
texts/: hin_corpus.txt  kok_corpus.txt  kok_hin_corpus.txt
